# bootlace

./: .coverage  .flake8  .pre-commit-config.yaml  .readthedocs.yaml  justfile  pyproject.toml  tox.ini  tox.toml
.github/workflows/: pypi-package.yml  tests.yml
docs/: conf.py  index.rst  install.rst  reference.rst
docs/api/: bootlace.forms.fields.BooleanField.rst  bootlace.forms.fields.ColorField.rst  bootlace.forms.fields.DateField.rst  bootlace.forms.fields.DateTimeField.rst  bootlace.forms.fields.DateTimeLocalField.rst  bootlace.forms.fields.DecimalField.rst  bootlace.forms.fields.DecimalRangeField.rst  bootlace.forms.fields.EmailField.rst  bootlace.forms.fields.EnumField.rst  bootlace.forms.fields.Field.rst  bootlace.forms.fields.FieldList.rst  bootlace.forms.fields.FileField.rst  bootlace.forms.fields.Flags.rst  bootlace.forms.fields.FloatField.rst  bootlace.forms.fields.FormField.rst  bootlace.forms.fields.HiddenField.rst  bootlace.forms.fields.IntegerField.rst  bootlace.forms.fields.IntegerRangeField.rst  bootlace.forms.fields.KnownMIMEType.rst  bootlace.forms.fields.Label.rst  (+78 more)
docs/source/: conf.py  (+1 more)
example/: app.py
requirements/: base.in  base.txt  dev.in  dev.txt  docs.txt  tests.txt  typing.in  typing.txt
scripts/: check-dist.py  check-minimal.py
stubs/dominate-stubs/: dom_tag.pyi  pyproject.toml  setup.py  svg.pyi  tags.pyi
stubs/dominate-stubs/src/dominate-stubs/: dom_tag.pyi  tags.pyi  util.pyi
tests/: __init__.py  conftest.py  test_breadcrumbs.py  test_endpoint.py  test_extension.py  test_links.py  test_sizes.py  test_styles.py  test_util.py
(+54 files in other folders)
