[project]
name = "dominate-stubs"
version = "0.1.0"
description = "PEP 561 type stubs for dominate, including bootlace's monkeypatching"
readme = "README.md"
authors = [{ name = "Alex Rudy", email = "opensource@alexrudy.net" }]
requires-python = ">=3.11"
dependencies = ["dominate"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
